--- a/DropDown menu.css
+++ b/DropDown menu.css
@@ -4,8 +4,11 @@ table{
     height: 6%;
     position: absolute;
     top: 0%;
+    left: 0%;
 }
-
+.cells-padding{
+  padding-left: 20%;
+}
 td{
     display: inline-block;
     margin-left: 1%;
@@ -17,7 +20,6 @@ a{  text-decoration: none;}
 .dropbtn {
     background-color: #0e4572;
     color: rgb(255, 255, 255);
-    padding-left: 16px;
     font-size: 16px;
     border: none;
 }
