--- a/DropDown menu.css
+++ b/DropDown menu.css
@@ -20,7 +20,7 @@ a{  text-decoration: none;}
 .dropbtn {
     background-color: #0e4572;
     color: rgb(255, 255, 255);
-    font-size: 16px;
+    font-size: 100%;
     border: none;
 }
 
