--- a/DropDown menu.css
+++ b/DropDown menu.css
@@ -6,13 +6,12 @@ table{
     top: 0%;
     left: 0%;
 }
-.cells-padding{
-  padding-left: 20%;
-}
+
 td{
     display: inline-block;
-    margin-left: 1%;
-    margin-top: 0.7%;
+    margin: 0.7% 0% 0% 1.5%;
+    vertical-align: middle;
+    text-align: center;
 }
 
 a{  text-decoration: none;}
@@ -33,8 +32,8 @@ a{  text-decoration: none;}
   display: none;
   position: absolute;
   background-color: #0e4572;
-  min-width: 80px;
-  padding-top: 10px;
+  max-width: 120%;
+  padding-top: 30%;
 }
 
 .dropdown-content a {
