--- a/DropDown menu.css
+++ b/DropDown menu.css
@@ -1,48 +1,60 @@
-table{
-    width: 100%;
-    background-color: #0e4572;
-    height: 6%;
-    position: absolute;
-    top: 0%;
-    left: 0%;
+body{
+  margin: 0;
+}
+.navbar {
+  overflow: hidden;
+  background-color: #0e4572;
 }
 
-td{
-    display: inline-block;
-    margin: 0.7% 0% 0% 1.7%;
-}
-
-a{  text-decoration: none;}
-
-.dropbtn {
-    background-color: #0e4572;
-    color: rgb(255, 255, 255);
-    font-size: 100%;
-    border: none;
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
 
 .dropdown {
-    position: relative;
-    display: inline-block;
+  float: left;
+  overflow: hidden;
 }
 
-.dropdown-content { 
+.dropdown .dropbtn {
+  font-size: 16px;  
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: #0c2d47;
+}
+
+.dropdown-content {
   display: none;
   position: absolute;
   background-color: #0e4572;
-  min-width: 100%;
-  padding-top: 10%;
-  margin-right: 20px;
+  min-width: 160px;
 }
 
 .dropdown-content a {
-  color: rgb(255, 255, 255);
-  padding: 16px 16px;
+  float: none;
+  color: rgb(247, 247, 247);
+  padding: 12px 16px;
   text-decoration: none;
   display: block;
+  text-align: left;
 }
-.dropdown-content a:hover {background-color: #0e4572;}
 
-.dropdown:hover .dropdown-content {display: block;}
+.dropdown-content a:hover {
+  background-color: #0c2d47;
+}
 
-.dropdown:hover .dropbtn {background-color: #0e4572;}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
