--- a/DropDown menu.css
+++ b/DropDown menu.css
@@ -49,3 +49,22 @@ body{
 .dropdown:hover .dropdown-content {
   display: block;
 }
+
+iframe-container{
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; 
+  height: 0;
+  padding: 10px 0px 10px 10px;
+  left: 10cm;
+  margin: auto;
+}
+.iframe-container iframe{
+  position: absolute;
+  top:0;
+  left: 10cm;
+  width: 100%;
+  height: 100%;
+  padding: 10px 0px 10px 10px;
+  margin: auto;
+}
